--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-md-editor": "^3.23.5",
+    "firebase": "^10.3.0",
     "gh-pages": "^6.0.0",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
